# tts-cli

./: .gitignore  CLAUDE.md  LICENSE  MIGRATION.md  Makefile  README.md  pyproject.toml  test_batch_inference.py
.github/workflows/: test.yml
examples/: example.py
src/tts_cli/: __init__.py  __main__.py  audio.py  cli.py  core.py  subtitle.py  text_processor.py  tts.py  utils.py  voice.py
src/tts_cli/server/: __init__.py  app.py  cli.py  config.py  db.py  models.py
src/tts_cli/server/routes/: __init__.py  files.py  health.py  tasks.py
src/tts_cli/server/services/: __init__.py  task_manager.py  tts_engine.py  worker.py
tests/: __init__.py  test_audio.py  test_cli.py  test_subtitle.py  test_text_processor.py  test_utils.py
